Add readiness / liveness probes
